<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/GET_STARTED_TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/connect_bluetooth"
        android:paddingTop="30dp"
        android:paddingBottom="15dp"
        />

    <Button
        android:id="@+id/BLUETOOTH_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GET_STARTED_TEXT"
        android:layout_centerHorizontal="true"
        android:text="@string/bluetooth_button"
        android:textSize="25sp"
        android:onClick="onClickBluetooth"/>

    <TextView
        android:id="@+id/CONFIG_TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BLUETOOTH_BUTTON"
        android:text="@string/config_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <Button
        android:id="@+id/CONFIG_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CONFIG_TEXT"
        android:layout_centerHorizontal="true"
        android:text="@string/config_button"
        android:textSize="25sp"
        android:onClick="onClickConfig"/>

</RelativeLayout>