<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:columnCount="2">

    <TextView
        android:id="@+id/gps_fix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="start"
        android:text="@string/gps_fix"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/LAT_LONG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/SET_POSITION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAnchorButton"
        android:text="@string/set_position"
        android:onClick="onClickSetPosition"/>

    <TextView
        android:id="@+id/anchorPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/anchor_position"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/LOCKED_LAT_LONG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/drag_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="start"
        android:text="@string/drag_radius"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/drag_radius_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/drag_radius_number"
        android:inputType="numberDecimal"
        android:clickable="true"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/SET_RADIUS_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_radius"
        android:onClick="onClickSetRadius"/>

    <Button
        android:id="@+id/BLUETOOTH_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/bluetooth_button"
        android:onClick="onClickBluetooth"/>

    <Button
        android:id="@+id/GOTO_MAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_map"
        android:onClick="onClickGoToMap"/>

</GridLayout>